# monorepo

./: .gitignore  .gitmodules  DroneCommands.py  README.md
.github/workflows/: lint.yml  ros2-build.yml
controls/: ost.txt  ost.yaml
controls/pipeline/: PX4GPSControl.py  boilerplate.py  gotosinglepoint.py  multiplecoordinates.py  multiplecoordswithtimestamps.py  navigatemultiplecords.py  navigatemultiplecordstimestamp.py  navigatemultiplecordsunrealtimestamp.py  navigateonecord.py  navigation.py  navigationtest.py  pixelconversion.py
controls/sae_2025_ws/: .gitignore  .ruff.toml  BRUH.md  COMMIT_MESSAGE.md  Dockerfile.build  INSTALL_VIDEO_STREAMING.sh  README.md
controls/sae_2025_ws/scripts/: INSTALL_VIDEO_STREAMING.sh  deploy.sh  push-deploy.sh
controls/sae_2025_ws/sim/: package.xml  setup.py
controls/sae_2025_ws/src/custom_gz_msgs/: CMakeLists.txt  README.md  package.xml
controls/sae_2025_ws/src/custom_gz_msgs/env-hooks/: gz_descriptor_path.sh.in
controls/sae_2025_ws/src/custom_gz_msgs/proto/gz/custom_msgs/: dynamic_detachable_joint.proto
controls/sae_2025_ws/src/custom_gz_plugins/: CMakeLists.txt  README.md  package.xml
controls/sae_2025_ws/src/custom_gz_plugins/src/dynamic_detachable_joint/: DynamicDetachableJoint.cc  DynamicDetachableJoint.hh
controls/sae_2025_ws/src/custom_sim_bridge/: CMakeLists.txt  README.md  package.xml  plugins.xml
controls/sae_2025_ws/src/custom_sim_bridge/config/: custom_sim_bridge_params.schema.yaml
controls/sae_2025_ws/src/custom_sim_bridge/include/custom_sim_bridge/: convert.hpp
controls/sae_2025_ws/src/custom_sim_bridge/src/: attach_detach_bridge.cpp  bridge_loader.cpp
controls/sae_2025_ws/src/integration/: README.md  app.py  launch.sh
controls/sae_2025_ws/src/integration/backend/: app_factory.py  config.py  context.py  models.py  ssh.py  state.py
controls/sae_2025_ws/src/launch/: sensor_combined_listener.launch.py
controls/sae_2025_ws/src/payload/: CMakeLists.txt  README.md  package.xml  plugins.xml
controls/sae_2025_ws/src/payload/config/: payload_params.schema.yaml  payload_params.yaml
controls/sae_2025_ws/src/payload/include/payload/: controller.hpp  controller_backend.hpp  gpio.hpp  gpio_controller.hpp  motor.hpp  payload.hpp  payload_controller.hpp  sim_controller.hpp
controls/sae_2025_ws/src/payload/launch/: payload.launch.py
controls/sae_2025_ws/src/payload/src/: gpio.cpp  gpio_controller.cpp  main.cpp  motor.cpp  payload.cpp  payload_controller.cpp  sim_controller.cpp
controls/sae_2025_ws/src/payload/test/: mock_lgpio.cpp  mock_lgpio.hpp  test_gpio_permissions.cpp  test_motor.cpp  test_motors.py
controls/sae_2025_ws/src/payload_interfaces/: CMakeLists.txt  package.xml
controls/sae_2025_ws/src/sim/: README.md  package.xml  setup.py
controls/sae_2025_ws/src/sim_interfaces/: CMakeLists.txt  package.xml
controls/sae_2025_ws/src/sim_interfaces/src/srv/: AttachDetach.srv  CreateMultiple.srv  HoopList.srv
controls/sae_2025_ws/src/tools/payload_teleop/: package.xml  setup.cfg  setup.py
controls/sae_2025_ws/src/tools/payload_teleop/payload_teleop/: keyboard_teleop.py
controls/sae_2025_ws/src/uav/: README.md  package.xml  setup.cfg  setup.py
controls/sae_2025_ws/src/uav_interfaces/: CMakeLists.txt  package.xml
controls/sae_2025_ws/src/uav_interfaces/msg/: HoopDirections.msg
controls/sae_2025_ws/src/uav_interfaces/src/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg  ConnectionStatus.msg  DroneState.msg  HoopContours.msg  HoopGeometry.msg  HoopTracking.msg  MineDetection.msg  PayloadTracking.msg  PoseEstimate.msg  Trajectory.msg  UAVState.msg
controls/sae_2025_ws/src/uav_interfaces/src/srv/: CameraData.srv  HelipadTracking.srv  HoopCenter.srv  HoopDetection.srv  HoopTracking.srv  Landing.srv  PayloadTracking.srv  PoseEstimate.srv
crash course/: camera_calibration.py  camera_test.py  cv1.ipynb  digit_classification.ipynb  digit_recognition.py  pytorch_part1.ipynb  pytorch_part1_assignment.ipynb  ros_demo.md
fun_facts/: package.json
fun_facts/src/: config.js
fun_facts/src/data/: geo.js
fun_facts/src/team-members/: alistairProfile.js  andrewProfile.js  belleProfile.js  brianProfile.js  colinProfile.js  feliciaProfile.js  frankieProfile.js  gavinProfile.js  henryProfile.js  ishaProfile.js  jasonProfile.js  jonathanProfile.js  keshavProfile.js  kevinProfile.js  michaelProfile.js  pranavProfile.js  rishabhProfile.js  ryanProfile.js  saviProfile.js  shivBarua.js  tianyiProfile.js  yijieProfile.js  yuvProfile.js  yuzhiProfile.js  zhaoProfile.js
git-intro/: README.md  index.html  package-lock.json  package.json
git-intro/src/: App.jsx
git-intro/src/components/: LocationsDisplay.jsx
git-intro/src/data/: locations.js
git-intro/src/team-members/: belleProfile.js  kevinProfile.js
git_intro/: README.md  package-lock.json
git_intro/src/: App.jsx
git_intro/src/components/: Globe.jsx
git_intro/src/team-members/: PROFILE_TEMPLATE.js
gz/: CMakeLists.txt  main.cpp
iarc:hci/: .flutter-plugins-dependencies
iarc:hci/.dart_tool/: package_config.json  package_graph.json
iarc:hci/.dart_tool/dartpad/: web_plugin_registrant.dart
iarc:hci/.dart_tool/flutter_build/: dart_plugin_registrant.dart
iarc:hci/MyApp/: package.json
iarc:hci/hci_app/.expo/prebuild/: cached-packages.json
iarc:hci/hci_app/android/: settings.gradle
iarc:hci/hci_app/android/app/: build.gradle
iarc:hci/hci_app/ios/: Podfile
iarc:hci/hci_app/ios/hciapp/: Info.plist
iarc:hci/hci_app/ios/hciapp.xcodeproj/: project.pbxproj
iarc:hci/hci_app/ios/hciapp.xcworkspace/: contents.xcworkspacedata
sim/iarc/path_planning/: greedy_algorithm.py
sim/sae aero/computer vision/: calbrate.py  calibrate.py  confidence.py  file.py  integration.py  recalibrate  recalibrate.py  rectangle_fit.py  threshold.py  tracking new.py  tracking.py
sim/sae aero/gazebo harmonic/: README.md  standalone_gazebo_cmd.sh  standalone_px4_cmd.sh
sim/sae aero/gazebo harmonic/worlds/: custom.sdf  custom_old.sdf  custom_with_tree.sdf
sim/sae aero/integration/: calibrate.py  threshold.py  track.py
(+305 files in other folders)
